<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".faculdade.FaculdadeValidacao">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:text="Voltar"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:icon="@drawable/back"
        app:iconSize="30dp"
        app:iconTint="@color/black"
        android:backgroundTint="@color/textColor"
        android:onClick="voltar"
        tools:ignore="MissingConstraints" />

    <ScrollView
        style="@android:style/Widget.Holo.TextView"
        android:layout_width="288dp"
        android:layout_height="100dp"
        android:layout_marginTop="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/sv_titulo">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textAlignment="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/txtPendente"
                android:textAlignment="center"
                android:textSize="28sp"
                android:textColor="@color/black"
                android:id="@+id/tv_status"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginTop="10dp"
                android:id="@+id/v_linha"/>
        </LinearLayout>
    </ScrollView>

    <ScrollView
        style="@android:style/Widget.Holo.TextView"
        android:layout_width="288dp"
        android:layout_height="500dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/sv_titulo"
        android:id="@+id/sv_perfil">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Nome Aluno"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:id="@+id/tv_aluno"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/txtDocumento"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:id="@+id/tv_documento"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/txtBaixar"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                android:textStyle="bold"
                app:icon="@drawable/download"
                android:onClick="downloadDocumento"/>


            <TextView
                android:id="@+id/tv_motivo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:text="@string/txtMotivo"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/sucessColor"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/txtAceitar"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/btn_aceitar"
                android:onClick="aceitar"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorError"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/txtNegar"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/btn_negar"
                android:onClick="negar"/>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>