<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginInstitucional">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login_professor"
        android:scaleType="center"
        tools:layout_editor_absoluteX="-53dp"
        tools:layout_editor_absoluteY="125dp" />

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="#00FFFFFF"
        android:onClick="back"
        android:text="Voltar"
        android:textColor="@color/textColor"
        app:icon="@drawable/back"
        app:cornerRadius="5sp"
        app:iconPadding="1sp"
        app:iconSize="30sp"
        app:iconTint="@color/textColor"
        app:layout_constraintHorizontal_bias="0.02"
        android:strokeColor="#05FFFFFF"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/txtBemVindo"
        android:textColor="@color/textColor"
        android:textFontWeight="700"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVoltar" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/txtCompleteAcesso"
        android:textColor="@color/textColorNoContrast"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

<!--  Inputs group  -->

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/txtEmail"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/editTextEmailInstitucional"
        android:layout_width="356dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:inputType="textWebEmailAddress"
        android:paddingLeft="10dp"
        android:hint="@string/txtEmail"
        android:textAlignment="textStart"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/txtSenha"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailInstitucional" />

    <EditText
        android:id="@+id/editTextSenhaInstitcional"
        android:layout_width="356dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:inputType="textWebPassword"
        android:paddingLeft="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="180dp"
        android:backgroundTint="#B46504"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/txtProsseguir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="navegarPerfil"/>
</androidx.constraintlayout.widget.ConstraintLayout>