<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeInstitucional">

    <Button
        android:id="@+id/btnStudent"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="303dp"
        android:layout_height="160dp"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="68dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/txtProfessor"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:onClick="loginProfessor"
        android:textColor="@color/colorPrimary"
        android:textColorHighlight="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:cornerRadius="10sp"
        app:icon="@drawable/student_icon"
        app:iconGravity="top"
        app:iconPadding="8dp"
        app:iconSize="50dp"
        app:iconTint="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.422"
        app:rippleColor="@color/colorSeconday" />

    <Button
        android:id="@+id/btnTeach"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="303dp"
        android:layout_height="160dp"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="68dp"
        android:fontFamily="@font/poppins_medium"
        android:onClick="loginFaculdade"
        android:text="@string/txtFaculdade"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textColorHighlight="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="10sp"
        app:icon="@drawable/teacher"
        app:iconGravity="top"
        app:iconPadding="8dp"
        app:iconSize="50dp"
        app:iconTint="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.772" />

    <TextView
        android:id="@+id/txtLabelContext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:paddingLeft="8sp"
        android:paddingRight="8sp"
        android:text="@string/txtPreLogin"
        android:textAlignment="center"
        android:textColor="#252525"
        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@+id/btnStudent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>