<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/colorBackground"

    tools:context=".estudante.EstudanteInstrucoes">

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:onClick="back"
        android:strokeColor="#05FFFFFF"
        android:text="Voltar"
        android:textColor="@color/textColorDark"
        app:cornerRadius="5sp"
        app:icon="@drawable/back"
        app:iconPadding="1sp"
        app:iconSize="30sp"
        app:iconTint="@color/textColorDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ScrollView
        style="@android:style/Widget.Holo.TextView"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txtAtencao"
            android:textAlignment="textStart"
            android:fontFamily="@font/poppins_medium"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:id="@+id/tv_nome"
            ></TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginTop="10dp"
                android:id="@+id/v_linha"
                ></View>
        </LinearLayout>
        </ScrollView>

    <ScrollView
        style="@android:style/Widget.Holo.ScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="0dp"
        android:fadeScrollbars="false"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/titleInstrucoes"
                android:textAlignment="textStart"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:id="@+id/tv_instrucoes1"
                ></TextView>

            <TextView
                android:id="@+id/tv_instrucoes2"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="200dp"
                android:text="@string/txtInstrucoes"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_medium"
                android:textStyle="normal"></TextView>

            <Button
                android:id="@+id/btnProsseguir"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:text="@string/txtProsseguir"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_medium"
                android:textSize="20sp"
                android:backgroundTint="@color/colorSeconday"
                android:textColor="@color/textColor"
                android:drawableRight="@drawable/prosseguir"
                android:onClick="navegarUpload"
                android:padding="15dp"
                />
        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>