<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".faculdade.HomeFaculdade">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:text="Voltar"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:icon="@drawable/back"
        app:iconSize="30dp"
        app:iconTint="@color/black"
        android:onClick="voltar"
        android:backgroundTint="@color/textColor"
        tools:ignore="MissingConstraints" />

    <ScrollView
        style="@android:style/Widget.Holo.TextView"
        android:layout_width="288dp"
        android:layout_height="100dp"
        android:layout_marginTop="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/sv_titulo">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/txtLogado"
                android:textAlignment="center"
                android:textSize="28sp"
                android:textColor="@color/black"
                android:id="@+id/tv_logado"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/txtFaculdade"
                android:textAlignment="center"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:id="@+id/tv_faculdade"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginTop="20dp"
                android:id="@+id/v_linha"/>
        </LinearLayout>
    </ScrollView>

    <ScrollView
        style="@android:style/Widget.Holo.ScrollView"
        android:layout_width="300dp"
        android:layout_height="385dp"
        android:layout_marginTop="200dp"
        android:fadeScrollbars="false"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.612"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sv_titulo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.988">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_validacao"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:onClick="telaPendencias"
                android:text="@string/txtValidacao"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                android:textStyle="bold"
                app:icon="@drawable/teacher"
                app:iconGravity="top"
                app:iconSize="45dp"
                app:iconTint="@color/textColor" />

            <Button
                android:id="@+id/btn_aluno"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:baselineAligned="false"
                android:onClick="navegarListaAluno"
                android:text="@string/txtListaAlunos"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                android:textStyle="bold"
                app:icon="@drawable/profile"
                app:iconGravity="top"
                app:iconSize="35dp"
                app:iconTint="@color/textColor" />

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/iv_saida"
        android:layout_width="20dp"
        android:layout_height="50dp"
        android:src="@drawable/saida"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        android:onClick="sair"/>


</androidx.constraintlayout.widget.ConstraintLayout>