<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".estudante.LoginEstudante">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login"
        android:scaleType="center"
        />
    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="#00FFFFFF"
        android:onClick="back"
        android:text="Voltar"
        android:textColor="@color/textColor"
        app:icon="@drawable/back"
        app:cornerRadius="5sp"
        app:iconPadding="1sp"
        app:iconSize="30sp"
        app:iconTint="@color/textColor"
        app:layout_constraintHorizontal_bias="0.02"
        android:strokeColor="#05FFFFFF"
        tools:ignore="MissingConstraints" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/txtBemVindo"
        android:textColor="@color/textColor"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.194"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="bottom"
            android:paddingBottom="20dp"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginLeft="30dp"
                android:padding="4dp"
                android:textColor="@color/textColorDark"
                android:textSize="20dp"
                android:fontFamily="@font/poppins_medium"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/txtRa"
                ></TextView>
            <EditText
                android:layout_width="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:id="@+id/edtLoginEstudante"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginLeft="30dp"
                android:padding="4dp"
                android:textColor="@color/textColorDark"
                android:textSize="20dp"
                android:fontFamily="@font/poppins_medium"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:text="@string/txtSenha"
                ></TextView>
            <EditText
                android:layout_width="match_parent"
                android:id="@+id/edtSenhaEstudante"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        >

        <Button
            android:id="@+id/btnHome"
            android:onClick="login"
            android:layout_width="50dp"
            android:background="@drawable/login"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:padding="15dp"
            />
<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/txtLogin"-->
<!--            android:textStyle="bold"-->
<!--            android:textColor="@color/colorPrimary"-->
<!--            android:textSize="25sp"-->
<!--            android:padding="15sp"-->
<!--            android:layout_marginStart="30dp"-->
<!--            android:layout_centerInParent="true"-->
<!--            android:layout_alignParentStart="true"/>-->
    </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="initCadastro"
                    android:text="@string/txtCadastro"
                    android:textStyle="bold"
                    android:textColor="#1b1b1b"
                    android:textSize="15sp"
                    android:fontFamily="@font/poppins_medium"
                    android:padding="15sp"
                    android:layout_centerInParent="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="10dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Esqueci a senha"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:fontFamily="@font/poppins_medium"
                    android:padding="15sp"
                    android:textColor="#1b1b1b"
                    android:layout_centerInParent="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginLeft="20dp"
                    />

            </RelativeLayout>
</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>